unstable pairing functionality

--- a/app/views/bootcoder/show.html.erb
+++ b/app/views/bootcoder/show.html.erb
@@ -1,3 +1,5 @@
-<h1><%= @bootcoder.handle %></h1>
-<h3><%= @bootcoder.email %></h3>
-<h3><%= @bootcoder.phone %></h3>
+<h1><%= @coder.handle %></h1>
+<h3><%= @coder.email %></h3>
+<h3><%= @coder.phone %></h3>
+<h4><%= link_to "Edit Profile", edit_bootcoder_path %><br>
+<%= link_to "Pairing sessions", bootcoder_pairings_path(@coder) %></h4>
