--- a/app/views/bootcoder/_form.html.erb
+++ b/app/views/bootcoder/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :bootcoder,  url: {action: "create", controller: "bootcoder"} do |f| %>
+<%= form_for :bootcoder do |f| %>
 
 <% if @bootcoder.errors.any? %>
     <div id="error_explanation">
