--- a/app/views/bootcoders/show.html.erb
+++ b/app/views/bootcoders/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @bootcoder.handle %></h1>
 <h3><%= @bootcoder.email %></h3>
-<h3><%= @Bootcoder.phone %></h3>
-<%= link_to bootcoder_pairings_path %>
+<h3><%= @bootcoder.phone %></h3>
+<h4><%= link_to "Edit Profile", edit_bootcoder_path %><br>
+<%= link_to "Pairing Sessions", bootcoder_pairing_sessions_path(@bootcoder) %>
