--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Pairus</h1>
 <h2>Let the pairs come to us with Pairus.</h2>
-<%= link_to "Sign up", sessions_new_coder_path %>
+<%= link_to "Sign up", new_session_path %>
